--- a/homepage/static/css/home.css
+++ b/homepage/static/css/home.css
@@ -168,7 +168,7 @@ h6 {
 #intro .intro-content h2 {
   color: #0c2e8a;
   margin-bottom: 30px;
-  font-size: 64px;
+  font-size: 42px;
   font-weight: 700;
 }
 
@@ -620,7 +620,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------*/
 
 #call-to-action {
-  background: #081e5b;
+  background: #6b85cd;
   background-size: cover;
   padding: 40px 0;
 }
