--- a/homepage/templates/home/home.html
+++ b/homepage/templates/home/home.html
@@ -145,8 +145,27 @@
           <div class="col-lg-6">
             <div class="box wow">
               <div class="icon"><i class="fa fa-shopping-bag"></i></div>
-              <h4 class="title"><a href="">Adat</a></h4>
-              <p class="description">Adat elemzés |  AB tesztelés | Kutatás, fejlesztés |
+              <h4 class="title"><a href="">Landing Page készítés</a></h4>
+              <p class="description">Az online marketingtevékenység egyik alapja. Azt pedig jól tudjuk, hogy megfelelő alapok nélkül nincs siker.
+                 </p>
+               <br />
+             </p>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="box wow">
+              <div class="icon"><i class="fa fa-shopping-bag"></i></div>
+              <h4 class="title"><a href="">Email kampány</a></h4>
+              <p class="description">Mondd el a céged sztoriját és légy a vásárlóid szeme előtt</p>
+               <br />
+             </p>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="box wow">
+              <div class="icon"><i class="fa fa-shopping-bag"></i></div>
+              <h4 class="title"><a href="">Adatvezérelt stratégia</a></h4>
+              <p class="description">Értsd meg és használd jobban az adataidat, együtt megtaláljuk könönséged
                <br />
              </p>
             </div>
@@ -155,190 +174,135 @@
       </div>
     </section><!-- #services -->
 
+    <main id="main">
+      <!--==========================
+        About Section
+      ============================-->
+      <section id="about" class="wow fadeInUp">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-6 about-img">
+              <div class="pull-right">
+              <img src={% static "images/lio.jpg" %}>
+              </div>
+            </div>
+
+            <div class="col-lg-6 content">
+              <h2>Miért válassz minket ?</h2>
+              <h3>Ha több pénzt akarsz keresni az online térben, ha hatékonyabb rendszert használnál,
+                ha nem találod a célcsoportod, vagy ha az offline értékesítésed konvertálnád az online világba
+                , építs adatvezérelt marketing és kereskedelmi stratégiánkra,
+                fogadd meg, amit tanácsolunk, vagy bízd ránk, hogy megcsináljuk Veled és a csapatoddal közösen</h3>
 
 
-    <!--==========================
-      Our Portfolio Section
-    ============================
+            </div>
+          </div>
+        </div>
+      </section><!-- #about -->
+<!--
     <section id="portfolio" class="wow fadeInUp">
       <div class="container">
         <div class="section-header">
           <h2>A Legmodernebb technológiákkal építjük a világot, hogy a márkád kitűnjön a tömegből.</h2>
           <h4>
-            Növeld a bevételt. Takaríts meg költségeket. Élvezd az elégedettséget.</h4>
+            Ha több pénzt akarsz keresni az online térben, ha hatékonyabb kiszolgáló rendszereket építenél, ha nem találod a célcsoportod,
+            vagy ha az offline értékesítésed konvertálnád az online világba,
+            építs adatvezérelt marketing és kereskedelmi stratégiánkra, fogadd meg,
+            amit tanácsolunk, vagy bízd ránk, hogy megcsináljuk Veled és a csapatoddal közösen.</h4>
         </div>
       </div>
-    </section>--><!-- #portfolio -->
+    </section>
+-->
 
-    <!--==========================
-      Testimonials Section
-    ============================
-    <section id="testimonials" class="wow fadeInUp">
-      <div class="container">
-        <div class="section-header">
-          <h2>Testimonials</h2>
-          <p>Sed tamen tempor magna labore dolore dolor sint tempor duis magna elit veniam aliqua esse amet veniam enim export quid quid veniam aliqua eram noster malis nulla duis fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
-        </div>
-        <div class="owl-carousel testimonials-carousel">
 
-            <div class="testimonial-item">
-              <p>
-                <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
-                Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-                <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
-              </p>
-              <img src="img/testimonial-1.jpg" class="testimonial-img" alt="">
-              <h3>Saul Goodman</h3>
-              <h4>Ceo &amp; Founder</h4>
+
+        <!--==========================
+          Services Section
+        ============================-->
+        <!--
+        <section id="services">
+          <div class="container">
+            <div class="section-header">
+              <h2>Miért válassz minket ?</h2>
+              <p></p>
             </div>
 
-            <div class="testimonial-item">
-              <p>
-                <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
-                Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
-                <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
-              </p>
-              <img src="img/testimonial-2.jpg" class="testimonial-img" alt="">
-              <h3>Sara Wilsson</h3>
-              <h4>Designer</h4>
-            </div>
+            <div class="row">
+              <div class="col-lg-6">
+                <div class="  fadeInLeft">
+                  <br />
 
-            <div class="testimonial-item">
-              <p>
-                <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
-                Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
-                <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
-              </p>
-              <img src="img/testimonial-3.jpg" class="testimonial-img" alt="">
-              <h3>Jena Karlis</h3>
-              <h4>Store Owner</h4>
-            </div>
+                  <h4 class="title"><a href="">PPC kampányok</a></h4>
+                  <p class="description">Google Ads kampánykezelés, hogy az első helyen szerepelj a google rendszerében.
+                        Állandó kommunikációval és eredmény kimutatással.</p>
+                </div>
+              </div>
 
-            <div class="testimonial-item">
-              <p>
-                <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
-                Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
-                <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
-              </p>
-              <img src="img/testimonial-4.jpg" class="testimonial-img" alt="">
-              <h3>Matt Brandon</h3>
-              <h4>Freelancer</h4>
-            </div>
+              <div class="col-lg-6">
+                <div class="box wow ">
+                  <div class="icon"><i class="fas fa-fist-raised"></i></div>
+                  <h4 class="title"><a href="">SEO</a></h4>
+                  <p class="description">A leghatékonyabb vevőszerző módszer jelenleg az, ha honlapja elöl van a Google keresőben. Közös munkával segítünk előre kerülni!</p>
+                </div>
+              </div>
 
-            <div class="testimonial-item">
-              <p>
-                <img src="img/quote-sign-left.png" class="quote-sign-left" alt="">
-                Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
-                <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
-              </p>
-              <img src="img/testimonial-5.jpg" class="testimonial-img" alt="">
-              <h3>John Larson</h3>
-              <h4>Entrepreneur</h4>
-            </div>
+              <div class="col-lg-6">
+                <div class="box  fadeInLeft">
+                  <div class="icon"><i class="fas fa-chart-bar"></i></div>
+                  <h4 class="title"><a href="">PPC kampányok</a></h4>
+                  <p class="description">Google Ads kampánykezelés, hogy az első helyen szerepelj a google rendszerében.
+                        Állandó kommunikációval és eredmény kimutatással.</p>
+                </div>
+              </div>
 
-        </div>
+              <div class="col-lg-6">
+                <div class="box wow ">
+                  <div class="icon"><i class="fas fa-fist-raised"></i></div>
+                  <h4 class="title"><a href="">SEO</a></h4>
+                  <p class="description">A leghatékonyabb vevőszerző módszer jelenleg az, ha honlapja elöl van a Google keresőben. Közös munkával segítünk előre kerülni!</p>
+                </div>
+              </div>
 
-      </div>
-    </section>--><!-- #testimonials -->
+              <div class="col-lg-6">
+                <div class="box wow ">
+                  <div class="icon"><i class="fas fa-mobile-alt"></i></div>
+                  <h4 class="title"><a href="">Közösségi média</a></h4>
+                  <p class="description">Csapatunk segítségével használja ki az új médiumokban rejlő hihetetlen lehetőségeket.</p>
+                </div>
+              </div>
 
-    <!--==========================
-      Call To Action Section
-    ============================-->
-    <section id="call-to-action" class="wow fadeInUp">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-9 text-center text-lg-left">
-            <h3 class="cta-title"></h3>
-            <h4 class="cta-text">
-              Mindez aprólékosan megtervezett lépésekkel kezdődik, amelyek a Yellow Cow szívét adják.<br />
-              Mind a stílusra, mind a magas színvonalú funkcionalitásra építünk, <br />továbbá karbantartást és digitális marketinget is kínálunk annak érdekében,
-              hogy zökkenőmentesen hajózzunk a digitális jövőbe.</h4>
-          </div>
-          <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="#contact">Kezdjük el!</a>
-          </div>
-        </div>
-
-      </div>
-    </section><!-- #call-to-action -->
-
-    <!--==========================
-      Our Team Section
-    ============================
-    <section id="team" class="wow fadeInUp">
-      <div class="container">
-        <div class="section-header">
-          <h2>Our Team</h2>
-        </div>
-        <div class="row">
-          <div class="col-lg-3 col-md-6">
-            <div class="member">
-              <div class="pic"><img src="img/team-1.jpg" alt=""></div>
-              <div class="details">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
-                <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
+              <div class="col-lg-6">
+                <div class="box wow">
+                  <div class="icon"><i class="fa fa-shopping-bag"></i></div>
+                  <h4 class="title"><a href="">Adatvezérelt stratégia</a></h4>
+                  <p class="description">Értsd meg és használd jobban az adataidat, együtt megértjük felhasználóidat</p>
+                   <br />
+                 </p>
                 </div>
               </div>
             </div>
           </div>
-
-          <div class="col-lg-3 col-md-6">
-            <div class="member">
-              <div class="pic"><img src="img/team-2.jpg" alt=""></div>
-              <div class="details">
-                <h4>Sarah Jhinson</h4>
-                <span>Product Manager</span>
-                <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
-                </div>
+        </section>--><!-- #services -->
+        <!--==========================
+          Call To Action Section
+        ============================-->
+        <section id="call-to-action" class="wow fadeInUp">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-9 text-center text-lg-left">
+                <h3 class="cta-title"></h3>
+                <h4 class="cta-text">
+                  Mindez aprólékosan megtervezett lépésekkel kezdődik, amelyek a Yellow Cow szívét adják.<br />
+                  Mind a stílusra, mind a magas színvonalú funkcionalitásra építünk, <br />továbbá karbantartást és digitális marketinget is kínálunk annak érdekében,
+                  hogy zökkenőmentesen hajózzunk a digitális jövőbe.</h4>
+              </div>
+              <div class="col-lg-3 cta-btn-container text-center">
+                <a class="cta-btn align-middle" href="#contact">Kezdjük el!</a>
               </div>
             </div>
+
           </div>
-
-          <div class="col-lg-3 col-md-6">
-            <div class="member">
-              <div class="pic"><img src="img/team-3.jpg" alt=""></div>
-              <div class="details">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
-                <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6">
-            <div class="member">
-              <div class="pic"><img src="img/team-4.jpg" alt=""></div>
-              <div class="details">
-                <h4>Amanda Jepson</h4>
-                <span>Accountant</span>
-                <div class="social">
-                  <a href=""><i class="fa fa-twitter"></i></a>
-                  <a href=""><i class="fa fa-facebook"></i></a>
-                  <a href=""><i class="fa fa-google-plus"></i></a>
-                  <a href=""><i class="fa fa-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </section>--><!-- #team -->
-
+        </section><!-- #call-to-action -->
     <!--==========================
       Contact Section
     ============================-->
