New page added kapcsolat .html with a form

--- a/homepage/templates/home/home.html
+++ b/homepage/templates/home/home.html
@@ -310,7 +310,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; 2019 <strong>The Yellow Cow</strong>. Minden jog fenntartva.
+        &copy; 2019 <strong> Yellow Cow</strong>. Minden jog fenntartva.
       </div>
     </div>
   </footer><!-- #footer -->
