with a new design and a working contact button

--- a/homepage/templates/home/home.html
+++ b/homepage/templates/home/home.html
@@ -61,7 +61,7 @@
       <h2 > Azon dolgozunk, hogy <span> megoldásaink,</span><br /> egyedi és céljaidhoz szabottak legyenek.</h2>
       <div>
         <a href="#about" class="btn-get-started scrollto">Kezdjük!</a>
-        <a href="#portfolio" class="btn-projects scrollto">Rólunk</a>
+      <!--  <a href="#portfolio" class="btn-projects scrollto">Rólunk</a>-->
       </div>
     </div>
   </section><!-- #intro -->
@@ -296,7 +296,7 @@
                   hogy zökkenőmentesen hajózzunk a digitális jövőbe.</h4>
               </div>
               <div class="col-lg-3 cta-btn-container text-center">
-                <a class="cta-btn align-middle" href="#contact">Kezdjük el!</a>
+                <a class="cta-btn align-middle" href="{% url 'kapcsolat' %}">Kezdjük el!</a>
               </div>
             </div>
 
