refreshed the css in menubar

--- a/homepage/static/css/navbar.css
+++ b/homepage/static/css/navbar.css
@@ -11,7 +11,7 @@
   transition: all 0.3s;
   opacity: 0;
   top: -100px;
-  padding-bottom: 6px;
+  padding-bottom: 20px;
   font-family: "Montserrat", sans-serif;
 }
 @media only screen and (max-width: 766px) {
@@ -31,8 +31,8 @@
 .sticky {
   background-color: rgba(255, 255, 255, 0.93);
   opacity: 1;
-  top: 0px;
-  border-bottom: 1px solid gainsboro;
+  top: 20px;
+  border-bottom: 3px solid gainsboro;
 }
 
 .logo {
@@ -89,9 +89,10 @@ nav ul li {
   }
 }
 nav ul a {
-  color: #888888;
+  color: #0c2e8a;
   text-transform: uppercase;
-  font-size: 12px;
+  font-size: 15px;
+  font-weight: bold;
 }
 
 .mobile-toggle {
@@ -130,67 +131,6 @@ nav ul a {
 
 
 
-
-
-.content {
-  padding: 50px 2% 250px;
-}
-
-.hero {
-  position: relative;
-  background: url(http://www.philippefercha.com/cd/toggle-menu-bg.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  text-align: center;
-  color: #fff;
-  padding-top: 110px;
-  min-height: 500px;
-  letter-spacing: 2px;
-  font-family: "Montserrat", sans-serif;
-}
-.hero h1 {
-  font-size: 50px;
-  line-height: 1.3;
-}
-.hero h1 span {
-  font-size: 25px;
-  color: #e8f380;
-  border-bottom: 2px solid #e8f380;
-  padding-bottom: 12px;
-  line-height: 3;
-}
-
-.mouse {
-  display: block;
-  margin: 0 auto;
-  width: 26px;
-  height: 46px;
-  border-radius: 13px;
-  border: 2px solid #e8f380;
-  position: absolute;
-  bottom: 40px;
-  position: absolute;
-  left: 50%;
-  margin-left: -26px;
-}
-.mouse span {
-  display: block;
-  margin: 6px auto;
-  width: 2px;
-  height: 2px;
-  border-radius: 4px;
-  background: #e8f380;
-  border: 1px solid transparent;
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-  -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
-  -webkit-animation-name: scroll;
-  animation-name: scroll;
-}
 
 @-webkit-keyframes scroll {
   0% {
