--- a/homepage/templates/home/home.html
+++ b/homepage/templates/home/home.html
@@ -37,7 +37,7 @@
   <header class="main_h">
 
       <div class="row">
-          <a class="logo" href="#">P/F</a>
+          <a class="logo" href="#">YC</a>
 
           <div class="mobile-toggle">
               <span></span>
