--- a/homepage/static/css/navbar.css
+++ b/homepage/static/css/navbar.css
@@ -31,14 +31,14 @@
 .sticky {
   background-color: rgba(255, 255, 255, 0.93);
   opacity: 1;
-  top: 20px;
-  border-bottom: 3px solid gainsboro;
+  top: 8px;
+  border-bottom: 3px solid #FFD90F;
 }
 
 .logo {
   width: 50px;
   font-size: 25px;
-  color: #8f8f8f;
+  color: #;
   text-transform: uppercase;
   float: left;
   display: block;
