--- a/homepage/templates/home/home.html
+++ b/homepage/templates/home/home.html
@@ -4,10 +4,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>The Yellow Cow </title>
+  <title>Yellow Cow Digitális marketing ahogy még sosem láttad</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="" name="keywords">
-  <meta content="" name="description">
+  <meta content="PPC kampányok digitális térben email marketing adatvezérelt landing page keszites közösségi media" name="keywords">
+  <meta content="PPC kampányok digitális térben email marketing adatvezérelt landing page keszites közösségi media" name="description">
 
   <!-- Favicons -->
   <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.ico' %}"/>
@@ -19,163 +19,45 @@
 
   <!-- Bootstrap CSS File -->
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 
   <!-- Libraries CSS Files -->
 
-  <script src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
   <!-- Main Stylesheet File -->
   <link rel="stylesheet" href="{% static 'css/home.css' %}">
   <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
 
-
 </head>
-
-<body id="body">
-
-
-  <header class="main_h">
-
-      <div class="row">
-          <a class="logo" href="#">YC</a>
-
-          <div class="mobile-toggle">
-              <span></span>
-              <span></span>
-              <span></span>
-          </div>
-
-          <nav>
-              <ul>
-                  <li><a href="#body">Főoldal</a></li>
-                  <li><a href="#about">Rólunk</a></li>
-                  <li><a href="#services">Szolgáltatásaink</a></li>
-                  <li><a href="{% url 'kapcsolat' %}"</a>Kapcsolat</li>
-              </ul>
-          </nav>
-
-      </div> <!-- / row -->
-
-  </header>
-  <section id="intro">
-
-    <div class="intro-content">
-      <h2 > Azon dolgozunk, hogy <span> megoldásaink,</span><br /> egyedi és céljaidhoz szabottak legyenek.</h2>
-      <div>
-        <a href="#about" class="btn-get-started scrollto">Kezdjük!</a>
-      <!--  <a href="#portfolio" class="btn-projects scrollto">Rólunk</a>-->
-      </div>
-    </div>
-  </section><!-- #intro -->
-  <main id="main">
-    <!--==========================
-      About Section
-    ============================-->
-    <section id="about" class="wow fadeInUp">
-      <div class="container">
+  <body id="body">
+    <header class="main_h">
         <div class="row">
-          <div class="col-lg-6 about-img">
-            <img src={% static "images/dognut1.jpg" %}>
+            <a class="logo" href="#">YC
+            </a>
+            <div class="mobile-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#body">Főoldal</a></li>
+                    <li><a href="#about">Rólunk</a></li>
+                    <li><a href="#services">Szolgáltatásaink</a></li>
+                    <li><a href="#call-to-action"</a>Kapcsolat</li>
+                </ul>
+            </nav>
+        </div> <!-- / row -->
 
-          </div>
+    </header>
+    <section id="intro">
 
-          <div class="col-lg-6 content">
-            <h2>Hello.</h2>
-            <h3>Dolgozzunk együtt, közösen létrehozzuk az élményt, amely a márkádat unalmastól a vásárlókig viszi.</h3>
-
-            <ul>
-              <li><span class="iconify" data-icon="ion:md-checkmark-circle-outline" data-inline="false"></span> Elképzelés</li>
-            <p>  Digitális stratégia,
-              Márka stratégia,
-              Prototípus,
-              Tartalom létrehozása,
-              Projektmenedzsment</p>
-              <li><span class="iconify" data-icon="ion:md-checkmark-circle-outline" data-inline="false"></span> Kreatív marketing</li>
-              <p> SEO,
-                  Marketing és fizetett média,
-                  Kreatív és fotózás,
-                  Szociális média tartalom</p>
-              <li><span class="iconify" data-icon="ion:md-checkmark-circle-outline" data-inline="false"></span>  Hatékony dizájn </li>
-              <p>
-                    Felhasználói tapasztalat,
-                    Felhasználói felület,
-                    Web design, Adatvezérelt fejlesztés,
-                    Interaktív</p>
-            </ul>
-          </div>
+      <div class="intro-content">
+        <h2 > Azon dolgozunk, hogy <span> megoldásaink,</span><br /> egyedi és céljaidhoz szabottak legyenek.</h2>
+        <div>
+          <a href="#about" class="btn-get-started scrollto">Kezdjük!</a>
+        <!--  <a href="#portfolio" class="btn-projects scrollto">Rólunk</a>-->
         </div>
       </div>
-
-    </section><!-- #about -->
-
-    <!--==========================
-      Services Section
-    ============================-->
-    <section id="services">
-      <div class="container">
-        <div class="section-header">
-          <h2>Szolgáltatások</h2>
-          <p></p>
-        </div>
-
-        <div class="row">
-
-          <div class="col-lg-6">
-            <div class="box wow fadeInLeft">
-              <div class="icon"><i class="fas fa-chart-bar"></i></div>
-              <h4 class="title"><a href="">PPC kampányok</a></h4>
-              <p class="description">Google Ads kampánykezelés, hogy az első helyen szerepelj a google rendszerében.
-                    Állandó kommunikációval és eredmény kimutatással.</p>
-            </div>
-          </div>
-
-          <div class="col-lg-6">
-            <div class="box wow animated infinite pulse slow delay-2s">
-              <div class="icon"><i class="fas fa-fist-raised"></i></div>
-              <h4 class="title"><a href="">SEO</a></h4>
-              <p class="description">A leghatékonyabb vevőszerző módszer jelenleg az, ha honlapja elöl van a Google keresőben. Közös munkával segítünk előre kerülni!</p>
-            </div>
-          </div>
-
-          <div class="col-lg-6">
-            <div class="box wow animated infinite pulse slow delay-2s">
-              <div class="icon"><i class="fas fa-mobile-alt"></i></div>
-              <h4 class="title"><a href="">Közösségi média</a></h4>
-              <p class="description">Csapatunk segítségével használja ki az új médiumokban rejlő hihetetlen lehetőségeket.</p>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="box wow">
-              <div class="icon"><i class="fa fa-shopping-bag"></i></div>
-              <h4 class="title"><a href="">Landing Page készítés</a></h4>
-              <p class="description">Az online marketingtevékenység egyik alapja. Azt pedig jól tudjuk, hogy megfelelő alapok nélkül nincs siker.
-                 </p>
-               <br />
-             </p>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="box wow">
-              <div class="icon"><i class="fa fa-shopping-bag"></i></div>
-              <h4 class="title"><a href="">Email kampány</a></h4>
-              <p class="description">Mondd el a céged sztoriját és légy a vásárlóid szeme előtt</p>
-               <br />
-             </p>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="box wow animated infinite pulse slow delay-2s">
-              <div class="icon"><i class="fa fa-shopping-bag"></i></div>
-              <h4 class="title"><a href="">Adatvezérelt stratégia</a></h4>
-              <p class="description">Értsd meg és használd jobban az adataidat, együtt megtaláljuk könönséged
-               <br />
-             </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section><!-- #services -->
-
+    </section><!-- #intro -->
     <main id="main">
       <!--==========================
         About Section
@@ -184,60 +66,223 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-6 about-img">
-              <div class="pull-right">
-              <img src={% static "images/lio.jpg" %}>
-              </div>
+              <img src={% static "images/dognut1.jpg" %}>
+
             </div>
 
             <div class="col-lg-6 content">
-              <h2>Miért válassz minket ?</h2>
-              <h3>Ha több pénzt akarsz keresni az online térben, ha hatékonyabb rendszert használnál,
-                ha nem találod a célcsoportod, vagy ha az offline értékesítésed konvertálnád az online világba
-                , építs adatvezérelt marketing és kereskedelmi stratégiánkra,
-                fogadd meg, amit tanácsolunk, vagy bízd ránk, hogy megcsináljuk Veled és a csapatoddal közösen</h3>
+              <h2>Hello.</h2>
+              <h3>Dolgozzunk együtt, közösen létrehozzuk az élményt, amely a márkádat unalmastól a vásárlókig viszi.</h3>
 
-
+              <ul>
+                <li><span class="iconify" data-icon="ion:md-checkmark-circle-outline" data-inline="false"></span> Elképzelés</li>
+              <p>  Digitális stratégia,
+                Márka stratégia,
+                Prototípus,
+                Tartalom létrehozása,
+                Projektmenedzsment</p>
+                <li><span class="iconify" data-icon="ion:md-checkmark-circle-outline" data-inline="false"></span> Kreatív marketing</li>
+                <p> SEO,
+                    Marketing és fizetett média,
+                    Kreatív és fotózás,
+                    Szociális média tartalom</p>
+                <li><span class="iconify" data-icon="ion:md-checkmark-circle-outline" data-inline="false"></span>  Hatékony dizájn </li>
+                <p>
+                      Felhasználói tapasztalat,
+                      Felhasználói felület,
+                      Web design, Adatvezérelt fejlesztés,
+                      Interaktív</p>
+              </ul>
             </div>
           </div>
         </div>
+
       </section><!-- #about -->
 
-        <!--==========================
-          Call To Action Section
-        ============================-->
-        <section id="call-to-action" class="wow fadeInUp">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-9 text-center text-lg-left">
-                <h3 class="cta-title"></h3>
-                <h4 class="cta-text">
-                  Mindez aprólékosan megtervezett lépésekkel kezdődik, amelyek a Yellow Cow szívét adják.<br />
-                  Mind a stílusra, mind a magas színvonalú funkcionalitásra építünk, <br />továbbá karbantartást és digitális marketinget is kínálunk annak érdekében,
-                  hogy zökkenőmentesen hajózzunk a digitális jövőbe.</h4>
-              </div>
-              <div class="col-lg-3 cta-btn-container text-center">
-                <a class="cta-btn align-middle" href="{% url 'kapcsolat' %}">Kapcsolat felvétel</a>
+      <!--==========================
+        Services Section
+      ============================-->
+      <section id="services">
+        <div class="container">
+          <!--<div class="section-header">
+            <h2>Szolgáltatások</h2>
+            <p></p>
+          </div>-->
+
+          <div class="row">
+
+            <div class="col-lg-6">
+              <div class="box wow fadeInLeft">
+                <div class="icon"><i class="fas fa-chart-bar"></i></div>
+                <h4 class="title"><a href="">PPC kampányok</a></h4>
+                <p class="description">Google Ads kampánykezelés, hogy az első helyen szerepelj a google rendszerében.
+                      Állandó kommunikációval és eredmény kimutatással.</p>
               </div>
             </div>
 
+            <div class="col-lg-6">
+              <div class="box wow animated infinite pulse slow delay-2s">
+                <div class="icon"><i class="fas fa-fist-raised"></i></div>
+                <h4 class="title"><a href="">SEO</a></h4>
+                <p class="description">A leghatékonyabb vevőszerző módszer jelenleg az, ha honlapja elöl van a Google keresőben. Közös munkával segítünk előre kerülni!</p>
+              </div>
+            </div>
+
+            <div class="col-lg-6">
+              <div class="box wow animated infinite pulse slow delay-2s">
+                <div class="icon"><i class="fas fa-mobile-alt"></i></div>
+                <h4 class="title"><a href="">Közösségi média</a></h4>
+                <p class="description">Csapatunk segítségével használja ki az új médiumokban rejlő hihetetlen lehetőségeket.</p>
+                <br />
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="box wow">
+                <h4 class="title"><a href="">Landing Page készítés</a></h4>
+                <p class="description">Az online marketingtevékenység egyik alapja. Azt pedig jól tudjuk, hogy megfelelő alapok nélkül nincs siker.
+                   </p>
+               </p>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="box wow">
+                <div class="icon"><i class="fa fa-shopping-bag"></i></div>
+                <h4 class="title"><a href="">Email kampány</a></h4>
+                <p class="description">Mondd el a céged sztoriját és légy a vásárlóid szeme előtt</p>
+               </p>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="box wow animated infinite pulse slow delay-2s">
+                <div class="icon"><i class="fa fa-shopping-bag"></i></div>
+                <h4 class="title"><a href="">Adatvezérelt stratégia</a></h4>
+                <p class="description">Értsd meg és használd jobban az adataidat, együtt megtaláljuk könönséged
+                 <br />
+               </p>
+              </div>
+            </div>
           </div>
-        </section><!-- #call-to-action -->
-  </main>
+        </div>
+      </section><!-- #services -->
 
-  <!--==========================
-    Footer
-  ============================-->
-  <footer id="footer">
-    <div class="container">
-      <div class="copyright">
-        &copy; 2019 <strong> Yellow Cow</strong>. Minden jog fenntartva.
+      <main id="main">
+        <!--==========================
+          About Section
+        ============================-->
+        <section id="about" class="wow fadeInUp">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-6 about-img">
+                <div class="pull-right">
+                <img src={% static "images/lio.jpg" %}>
+                </div>
+              </div>
+
+              <div class="col-lg-6 content">
+                <h2>Miért válassz minket ?</h2>
+                <h3>Ha több pénzt akarsz keresni az online világban, hatékonyabb rendszerben dolgoznál,
+                  nem találod célcsoportod, vagy átirányítanád offline értékesítésed az online világba
+                  , építs adatvezérelt marketing és kereskedelmi stratégiánkra,
+                  fogadd meg, amit tanácsolunk, vagy bízd ránk, hogy megcsináljuk Veled és a csapatoddal közösen</h3>
+              </div>
+              <div class="col-lg-3 cta-btn-container">
+                <a class="cta-btn align-middle" href="{% url 'kapcsolat' %}">Kapcsolat felvétel</a>
+              </div>
+            </div>
+          </div>
+        </section><!-- #about -->
+
+            <!--==========================
+              Services Section
+            ============================-->
+            <section id="services2">
+              <div class="container">
+                <div class="section-header">
+                  <h2>Hogyan dolgozunk</h2>
+                  <p></p>
+                </div>
+
+                <div class="row">
+
+                  <div class="col-lg-6">
+                    <div class="">
+                      <h4 class="title"><a href=""></a></h4>
+                      <p class="description"></p>
+                    </div>
+                  </div>
+
+                  <div class="col-lg-6">
+                    <div class="box wow">
+                      <h4 class="title">1 Beszélgetünk</h4>
+                      <p class="description">Megismerjük céljaid és meghatározzuk merre szeretne céged tartani</p>
+                    </div>
+                  </div>
+
+                  <div class="col-lg-6">
+                    <div class="box wow">
+                      <h4 class="title">2 Adatokat elmezünk</h4>
+                      <p class="description">Piacodat felmérjük adatok segítségével megismerjük vásárlóidat.</p>
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="box wow">
+                      <h4 class="title">3 Kidolgozzuk a tervet</h4>
+                      <p class="description">Az adatok és céljaid figyelmbevételével megalkotjuk a győztes tervet.</p>
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="box wow">
+                      <h4 class="title">4 Megvalósítjuk</h4>
+                      <p class="description">Végigvisszük a tervet szorosan együttmüködve a cégeddel.</p>
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="box wow">
+                      <h4 class="title">5 Elemzünk</h4>
+                      <p class="description">Az eredményeket feldolgozzuk, új lehetőségeket keresünk és segítünk a következő szintre lépni.</p>
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+            </section><!-- #services -->
+
+        <!--  ==========================
+            Call To Action Section
+          ============================-->
+          <section id="call-to-action" class="wow fadeInUp">
+            <div class="container">
+              <div class="row">
+                <div class="col-lg-9 text-center text-lg-left">
+                  <h3 class="cta-title"></h3>
+                  <h4 class="cta-text">
+                    Mindez aprólékosan megtervezett lépésekkel kezdődik, amelyek a Yellow Cow szívét adják.
+                    Mind a stílusra, mind a magas színvonalú funkcionalitásra építünk, továbbá karbantartást és digitális marketinget is kínálunk annak érdekében,
+                    hogy zökkenőmentesen hajózzunk a digitális jövőbe.</h4>
+                </div>
+                <div class="col-lg-3 cta-btn-container text-center">
+                  <a class="cta-btn align-middle" href="{% url 'kapcsolat' %}">Kapcsolat felvétel</a>
+                </div>
+              </div>
+
+            </div>
+          </section><!-- #call-to-action -->
+    </main>
+
+    <!--==========================
+      Footer
+    ============================-->
+    <footer id="footer">
+      <div class="container">
+        <div class="copyright">
+          &copy; 2019 <strong> Yellow Cow</strong>. Minden jog fenntartva.
+        </div>
       </div>
-    </div>
-  </footer><!-- #footer -->
+    </footer><!-- #footer -->
 
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
 
-</body>
+  </body>
 </html>
