new setting for services in css

--- a/homepage/templates/home/home.html
+++ b/homepage/templates/home/home.html
@@ -104,10 +104,10 @@
       ============================-->
       <section id="services">
         <div class="container">
-          <!--<div class="section-header">
+          <div class="section-header">
             <h2>Szolgáltatások</h2>
             <p></p>
-          </div>-->
+          </div>
 
           <div class="row">
 
@@ -129,7 +129,7 @@
             </div>
 
             <div class="col-lg-6">
-              <div class="box wow animated infinite pulse slow delay-2s">
+                <div class="box wow animated infinite pulse slow delay-2s">
                 <div class="icon"><i class="fas fa-mobile-alt"></i></div>
                 <h4 class="title"><a href="">Közösségi média</a></h4>
                 <p class="description">Csapatunk segítségével használja ki az új médiumokban rejlő hihetetlen lehetőségeket.</p>
