--- a/homepage/static/css/home.css
+++ b/homepage/static/css/home.css
@@ -344,7 +344,7 @@ h6 {
 
 #services {
   padding: 30px 0 0 0;
-  background: url("/static/images/com.svg") 50% 0 no-repeat fixed;
+  background: url("/static/images/whi.png") 50% 0  fixed;
 
 }
 
