--- a/homepage/templates/home/home.html
+++ b/homepage/templates/home/home.html
@@ -41,6 +41,7 @@
                 <ul>
                     <li><a href="#body">Főoldal</a></li>
                     <li><a href="#about">Rólunk</a></li>
+                    <li><a href="#"</a>Blog</li>
                     <li><a href="#services">Szolgáltatásaink</a></li>
                     <li><a href="#call-to-action"</a>Kapcsolat</li>
                 </ul>
@@ -51,13 +52,20 @@
     <section id="intro">
 
       <div class="intro-content">
-        <h2 > Azon dolgozunk, hogy <span> megoldásaink,</span><br /> egyedi és céljaidhoz szabottak legyenek.</h2>
+        <h2 > Azon dolgozunk, hogy <span>SEO és digitális marketing</span>  megoldásokkal növekedést biztosítsunk számodra.<br /> </h2>
         <div>
+
           <a href="#about" class="btn-get-started scrollto">Kezdjük!</a>
-        <!--  <a href="#portfolio" class="btn-projects scrollto">Rólunk</a>-->
         </div>
       </div>
+
+
     </section><!-- #intro -->
+    <div class="scroll-downs">
+      <div class="mousey">
+        <div class="scroller"></div>
+      </div>
+    </div>
     <main id="main">
       <!--==========================
         About Section
@@ -73,26 +81,11 @@
             <div class="col-lg-6 content">
               <h2>Hello.</h2>
               <h3>Dolgozzunk együtt, közösen létrehozzuk az élményt, amely a márkádat unalmastól a vásárlókig viszi.</h3>
-
-              <ul>
-                <li><span class="iconify" data-icon="ion:md-checkmark-circle-outline" data-inline="false"></span> Elképzelés</li>
-              <p>  Digitális stratégia,
-                Márka stratégia,
-                Prototípus,
-                Tartalom létrehozása,
-                Projektmenedzsment</p>
-                <li><span class="iconify" data-icon="ion:md-checkmark-circle-outline" data-inline="false"></span> Kreatív marketing</li>
-                <p> SEO,
-                    Marketing és fizetett média,
-                    Kreatív és fotózás,
-                    Szociális média tartalom</p>
-                <li><span class="iconify" data-icon="ion:md-checkmark-circle-outline" data-inline="false"></span>  Hatékony dizájn </li>
-                <p>
-                      Felhasználói tapasztalat,
-                      Felhasználói felület,
-                      Web design, Adatvezérelt fejlesztés,
-                      Interaktív</p>
-              </ul>
+              Ha több pénzt akarsz keresni az online világban, hatékonyabb rendszerben dolgoznál,
+                nem találod célcsoportod, vagy átirányítanád offline értékesítésed az online világba
+                , építs adatvezérelt marketing és kereskedelmi stratégiánkra,
+                fogadd meg, amit tanácsolunk, vagy bízd ránk, hogy megcsináljuk Veled és a csapatoddal közösen
+              </h3>
             </div>
           </div>
         </div>
@@ -136,30 +129,6 @@
                 <br />
               </div>
             </div>
-            <div class="col-lg-6">
-              <div class="box wow">
-                <h4 class="title"><a href="">Landing Page készítés</a></h4>
-                <p class="description">Az online marketingtevékenység egyik alapja. Azt pedig jól tudjuk, hogy megfelelő alapok nélkül nincs siker.
-                   </p>
-               </p>
-              </div>
-            </div>
-            <div class="col-lg-6">
-              <div class="box wow">
-                <div class="icon"><i class="fa fa-shopping-bag"></i></div>
-                <h4 class="title"><a href="">Email kampány</a></h4>
-                <p class="description">Mondd el a céged sztoriját és légy a vásárlóid szeme előtt</p>
-               </p>
-              </div>
-            </div>
-            <div class="col-lg-6">
-              <div class="box wow animated infinite pulse slow delay-2s">
-                <div class="icon"><i class="fa fa-shopping-bag"></i></div>
-                <h4 class="title"><a href="">Adatvezérelt stratégia</a></h4>
-                <p class="description">Értsd meg és használd jobban az adataidat, együtt megtaláljuk könönséged
-                 <br />
-               </p>
-              </div>
             </div>
           </div>
         </div>
@@ -168,7 +137,7 @@
       <main id="main">
         <!--==========================
           About Section
-        ============================-->
+        ============================
         <section id="about" class="wow fadeInUp">
           <div class="container">
             <div class="row">
@@ -190,11 +159,11 @@
               </div>
             </div>
           </div>
-        </section><!-- #about -->
+        </section>--><!-- #about -->
 
             <!--==========================
               Services Section
-            ============================-->
+            ============================
             <section id="services2">
               <div class="container">
                 <div class="section-header">
@@ -245,7 +214,7 @@
 
                 </div>
               </div>
-            </section><!-- #services -->
+            </section>--><!-- #services -->
 
         <!--  ==========================
             Call To Action Section
