--- a/homepage/static/css/navbar.css
+++ b/homepage/static/css/navbar.css
@@ -31,8 +31,8 @@
 .sticky {
   background-color: rgba(255, 255, 255, 0.93);
   opacity: 1;
-  top: 8px;
-  border-bottom: 3px solid #FFD90F;
+  top: 1px;
+  /*border-bottom: 3px solid #;*/
 }
 
 .logo {
